[gd_scene load_steps=4 format=3 uid="uid://bj4bqgrtm45d7"]

[ext_resource type="Script" path="res://objects/new_inventory_item_button.gd" id="1_uaym8"]
[ext_resource type="Texture2D" uid="uid://ndh47bgvnfqs" path="res://Sprites/Menus/Inventory_item_sprites/sm_sprinklers.png" id="2_lprjk"]
[ext_resource type="Texture2D" uid="uid://d33tby7fcoevp" path="res://Sprites/Menus/Inventory_box_containers_HL.png" id="3_uunwp"]

[node name="Inventory_item" type="CenterContainer"]
process_mode = 3
custom_minimum_size = Vector2(16, 16)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_uaym8")

[node name="Item_button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="invo_icon" type="Sprite2D" parent="Item_button"]
position = Vector2(8, 8)
texture = ExtResource("2_lprjk")

[node name="Label" type="Label" parent="Item_button"]
layout_mode = 2
offset_left = 8.0
offset_top = 5.0
offset_right = 16.0
offset_bottom = 16.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 7
text = "00"

[node name="HL" type="Sprite2D" parent="Item_button"]
position = Vector2(8, 8)
scale = Vector2(0.390244, 0.390244)
texture = ExtResource("3_uunwp")

[connection signal="button_down" from="Item_button" to="." method="_on_item_button_button_down"]
[connection signal="focus_entered" from="Item_button" to="." method="_on_item_button_focus_entered"]
[connection signal="focus_exited" from="Item_button" to="." method="_on_item_button_focus_exited"]
[connection signal="mouse_entered" from="Item_button" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="Item_button" to="." method="_on_texture_rect_mouse_exited"]
